fixed minor issues and spacing inaccuracies

--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,8 +1,14 @@
 .header__lang-links {
-  margin: 0;
+  margin: 28px 0 0;
   padding: 0;
   display: flex;
   height: 100%;
   align-self: center;
   list-style-type: none;
+}
+
+@media screen and (max-width: 425px) {
+  .header__lang-links {
+    margin: 16px 0 0;
+  }
 }
