--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,10 +1,12 @@
 .header__logo {
+  margin: 28px 0 0;
   width: 176px;
   height: 52px;
 }
 
 @media screen and (max-width: 425px) {
   .header__logo {
+    margin: 16px 0 0;
     width: 142px;
     height: 42px;
   }
