--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,3 +6,15 @@
   color: #fff;
   margin: 8px 0 0 0;
 }
+
+@media screen and (max-width: 768px) {
+  .lead__caption {
+    margin: 8px 0 0 24px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .lead__caption {
+    margin: 8px 0 0 16px;
+  }
+}
