--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,7 @@
 
 .page {
   background-color: #2A2C2F;
+  min-width: 320px;
   max-width: 1280px;
   margin: 0 auto;
   padding: 0;
